--- a/BulkyWeb/Views/Category/Index.cshtml
+++ b/BulkyWeb/Views/Category/Index.cshtml
@@ -2,3 +2,10 @@
     ViewData["Title"] = "Category List";
 }
 <h1>@ViewData["Title"]</h1>
+
+<table class="table table-bordered table-striped">
+    <tr>
+        <th>Category Name</th>
+        <th>Display Order</th>
+    </tr>
+</table>
