--- a/BulkyWeb/Views/Category/Index.cshtml
+++ b/BulkyWeb/Views/Category/Index.cshtml
@@ -1,11 +1,24 @@
-﻿@{
+﻿@model List<Category>
+
+@{
     ViewData["Title"] = "Category List";
 }
 <h1>@ViewData["Title"]</h1>
 
 <table class="table table-bordered table-striped">
+    <thead>
     <tr>
         <th>Category Name</th>
         <th>Display Order</th>
     </tr>
+     </thead>
+     <tbody>
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>@item.Name</td>
+            <td>@item.DisplayOrder</td>
+        </tr>
+    }
+    </tbody>
 </table>
