--- a/BulkyWeb/Views/Category/Index.cshtml
+++ b/BulkyWeb/Views/Category/Index.cshtml
@@ -3,7 +3,22 @@
 @{
     ViewData["Title"] = "Category List";
 }
-<h1>@ViewData["Title"]</h1>
+
+<div class="container">
+
+    <div class="row pt-4 pb-3">
+        <div class="col-6">
+            <h1 class="text-primary">@ViewData["Title"]</h1>
+        </div>
+
+        <div class="col-6 text-end">
+             <a asp-controller="Category" asp-action="Create" class="btn btn-primary">
+                <i class="bi bi-plus-circle"></i>Create New Category</a>
+        </div>
+    </div>
+
+
+
 
 <table class="table table-bordered table-striped">
     <thead>
@@ -22,3 +37,5 @@
     }
     </tbody>
 </table>
+
+</div>
