--- a/BulkyWeb/Views/Category/Index.cshtml
+++ b/BulkyWeb/Views/Category/Index.cshtml
@@ -25,6 +25,7 @@
     <tr>
         <th>Category Name</th>
         <th>Display Order</th>
+        <th></th>
     </tr>
      </thead>
      <tbody>
@@ -33,6 +34,16 @@
         <tr>
             <td>@item.Name</td>
             <td>@item.DisplayOrder</td>
+            <td>
+                <div class="w-75 btn-group" role="group">
+                    <a asp-controller="Category" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary mx-2">
+                        <i class="bi bi-pencil"></i> Edit
+                    </a>
+                    <a asp-controller="Category" asp-action="Delete" class="btn btn-danger mx-2">
+                        <i class="bi bi-trash"></i> Delete
+                    </a>
+                </div>
+            </td>
         </tr>
     }
     </tbody>
