--- a/BulkyWeb/Views/Category/Index.cshtml
+++ b/BulkyWeb/Views/Category/Index.cshtml
@@ -4,21 +4,21 @@
     ViewData["Title"] = "Category List";
 }
 
-<div class="container">
-
-    <div class="row pt-4 pb-3">
-        <div class="col-6">
-            <h1 class="text-primary">@ViewData["Title"]</h1>
+<div class="card shadow border-0 mt-4">
+    <div class="card-header bg-secondary bg-gradient ml-0 py-3">
+        <div class="row">
+            <div class="col-12 text-center">
+                <h2 class="text-white py-2">@ViewData["Title"]</h2>
+            </div>
         </div>
-
-        <div class="col-6 text-end">
+    </div>
+    <div class="card-body p-4">
+   <div class="row pb-3">
+        <div class="col-12 text-end">
              <a asp-controller="Category" asp-action="Create" class="btn btn-primary">
                 <i class="bi bi-plus-circle"></i> Create New Category</a>
         </div>
     </div>
-
-
-
 
 <table class="table table-bordered table-striped">
     <thead>
@@ -48,5 +48,6 @@
     }
     </tbody>
 </table>
+</div>
 
 </div>
