--- a/BulkyWeb/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Product/Upsert.cshtml
@@ -11,7 +11,10 @@
     <div class="card-body p-4">
         <form method="post" class="row" enctype="multipart/form-data">
         <input asp-for="Product.Id" type="hidden" />
-    <div class="border p-3">
+
+        <div class="row">
+            <div class="col-10">
+<div class="border p-3">
         <div class="form-floating py-2 col-12">
             <input asp-for="Product.Title" class="form-control border-0 shadow" />
              <label asp-for="Product.Title" class="ms-2"></label>
@@ -87,6 +90,14 @@
             </div>
         </div>
     </div>
+            </div>
+            <div class="col-2">
+                <img src="@Model.Product.ImageUrl" width="100" height="100" class="img-thumbnail" alt="@Model.Product.Title"
+                style="border-radius: 5px; border: 1px solid #bbb9b9"/>
+            </div>
+        </div>
+
+    
 </form>
 </div>
 
