--- a/BulkyWeb/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Product/Upsert.cshtml
@@ -11,6 +11,8 @@
     <div class="card-body p-4">
         <form method="post" class="row" enctype="multipart/form-data">
         <input asp-for="Product.Id" type="hidden" />
+        <input asp-for="Product.ImageUrl" type="hidden" />
+
 
         <div class="row">
             <div class="col-10">
