--- a/BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
@@ -20,7 +20,7 @@
         </div>
     </div>
 
-<table class="table table-bordered table-striped">
+<table id="tblData" class="table table-bordered table-striped" style="width: 100%;">
     <thead>
     <tr>
       <th>Title</th>
@@ -31,29 +31,12 @@
       <th></th>
     </tr>
      </thead>
-     <tbody>
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>@item.Title</td>
-            <td>@item.ISBN</td>
-            <td>@item.Price</td>
-            <td>@item.Author</td>
-            <td></td>
-            <td>
-                <div class="w-75 btn-group" role="group">
-                    <a asp-controller="Product" asp-action="Upsert" asp-route-id="@item.Id" class="btn btn-primary mx-2">
-                        <i class="bi bi-pencil"></i> Edit
-                    </a>
-                    <a asp-controller="Product" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger mx-2">
-                        <i class="bi bi-trash"></i> Delete
-                    </a>
-                </div>
-            </td>
-        </tr>
-    }
-    </tbody>
 </table>
 </div>
 
 </div>
+
+@section Scripts
+{
+    <script src="~/js/product.js"></script>
+}
