updated the product.js

--- a/BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
@@ -20,7 +20,7 @@
         </div>
     </div>
 
-<table id="tblData" class="table table-bordered table-striped" style="width: 100%;">
+<table id="productTable" class="table table-bordered table-striped" style="width: 100%;">
     <thead>
     <tr>
       <th>Title</th>
@@ -30,7 +30,7 @@
       <th>Category</th>
       <th></th>
     </tr>
-     </thead>
+    </thead>
 </table>
 </div>
 
