--- a/BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
@@ -20,7 +20,7 @@
         </div>
     </div>
 
-<table id="productTable" class="table table-bordered table-striped" style="width: 100%;">
+<table class="table table-bordered table-striped">
     <thead>
     <tr>
       <th>Title</th>
@@ -30,13 +30,35 @@
       <th>Category</th>
       <th></th>
     </tr>
-    </thead>
+     </thead>
+     <tbody>
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>@item.Title</td>
+            <td>@item.ISBN</td>
+            <td>@item.Price</td>
+            <td>@item.Author</td>
+            <td>@item.Category.Name</td>
+            <td>
+                <div class="w-75 btn-group" role="group">
+                    <a asp-controller="Product" asp-action="Upsert" asp-route-id="@item.Id" class="btn btn-primary mx-2">
+                        <i class="bi bi-pencil"></i> Edit
+                    </a>
+                    <a asp-controller="Product" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger mx-2">
+                        <i class="bi bi-trash"></i> Delete
+                    </a>
+                </div>
+            </td>
+        </tr>
+    }
+    </tbody>
 </table>
 </div>
 
 </div>
 
-@section Scripts
-{
+
+@section Scripts {
     <script src="~/js/product.js"></script>
 }
