--- a/BulkyWeb/Areas/Customer/Views/Home/Index.cshtml
+++ b/BulkyWeb/Areas/Customer/Views/Home/Index.cshtml
@@ -25,7 +25,7 @@
                         </div>
                     </div>
                     <div>
-                        <a href="@Url.Action("Details", "Product", new { id = product.Id })" class="btn btn-warning text-white w-100">Details</a>
+                        <a href="@Url.Action("Details", "Product", new { id = product.Id })" class="btn btn-primary bg-gradient border-0 form-control">Details</a>
                     </div>
                 </div>
             </div>
