--- a/BulkyWeb/Views/Shared/_Layout.cshtml
+++ b/BulkyWeb/Views/Shared/_Layout.cshtml
@@ -33,7 +33,9 @@
                             <a class="nav-link" asp-area="Customer" asp-controller="Home"
                                 asp-action="Privacy">Privacy</a>
                         </li>
-                        <li class="nav-item dropdown">
+                        @if(User.IsInRole(SD.Role_Admin))
+                        {
+                            <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
                                 Content Management
@@ -49,6 +51,7 @@
                                 </li>
                                 <hr class="dropdown-divider">
                         </li>
+                        }
                             </ul>
                     </ul>
                     <partial name="_LoginPartial" />
