--- a/BulkyWeb/Areas/Identity/Pages/Account/Register.cshtml
+++ b/BulkyWeb/Areas/Identity/Pages/Account/Register.cshtml
@@ -17,10 +17,21 @@
             <h3 class="border-bottom pb-3 mb-4 text-secondary text-center">Create a new account.</h3>
 
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
+
             <div class="form-floating mb-3 col-md-12">
                 <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
                 <label asp-for="Input.Email" class="ms-2 text-muted">Email</label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
+            </div>
+               <div class="form-floating mb-3 col-md-6">
+                <input asp-for="Input.Name" class="form-control" placeholder="First Name" />
+                <label asp-for="Input.Name" class="ms-2 text-muted">First Name</label>
+                <span asp-validation-for="Input.Name" class="text-danger"></span>
+            </div>
+            <div class="form-floating mb-3 col-md-6">
+                <input asp-for="Input.PhoneNumber" class="form-control" placeholder="Phone Number" />
+                <label asp-for="Input.PhoneNumber" class="ms-2 text-muted">Phone Number</label>
+                <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3 col-md-6">
                 <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
@@ -31,6 +42,26 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
                 <label asp-for="Input.ConfirmPassword" class="ms-2 text-muted">Confirm Password</label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+            </div>
+             <div class="form-floating mb-3 col-md-6">
+                <input asp-for="Input.StreetAddress" class="form-control" placeholder="Street Address" />
+                <label asp-for="Input.StreetAddress" class="ms-2 text-muted">Street Address</label>
+                <span asp-validation-for="Input.StreetAddress" class="text-danger"></span>
+            </div>
+            <div class="form-floating mb-3 col-md-6">
+                <input asp-for="Input.City" class="form-control" placeholder="City" />
+                <label asp-for="Input.City" class="ms-2 text-muted">City</label>
+                <span asp-validation-for="Input.City" class="text-danger"></span>
+            </div>
+            <div class="form-floating mb-3 col-md-6">
+                <input asp-for="Input.State" class="form-control" placeholder="State" />
+                <label asp-for="Input.State" class="ms-2 text-muted">State</label>
+                <span asp-validation-for="Input.State" class="text-danger"></span>
+            </div>
+            <div class="form-floating mb-3 col-md-6">
+                <input asp-for="Input.PostalAddress" class="form-control" placeholder="Postal Address" />
+                <label asp-for="Input.PostalAddress" class="ms-2 text-muted">Postal Address</label>
+                <span asp-validation-for="Input.PostalAddress" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3 col-md-6">
                 <select asp-for="Input.Role" asp-items="@Model.Input.RoleList" class="form-select">
