Added the company foreign key to the ApplicationUser model Updated the Register view to include the company dropdown Added migrations for the company foreign key Seeded the Company table in the database Updated the Company Home, Edit, and Create pages Added JavaScript script to retrieve and display company data in a table Fixed bug in login functionality Improved error handling in API calls Refactored code for better performance Added new feature for user authentication Updated UI layout for improved user experience Added the Company DbSet table Added the Companies repository and unit of work Added migrations to create the Companies table in the database Updated layout path in _Layout.cshtml Updated AssemblyInformationalVersion in AssemblyInfo.cs Updated AssemblyInfoInputs.cache Updated GeneratedMSBuildEditorConfig.editorconfig Updated project.razor.vscode.bin Added additional fields to the registration form Updated the registration form to include more input fields Added migration to fix the ApplicationUser Name property type to string Updated the login UI Updated the register page Added authorization to controllers and views Added roles in the database Added the IEmailSender interface

--- a/BulkyWeb/Areas/Identity/Pages/Account/Register.cshtml
+++ b/BulkyWeb/Areas/Identity/Pages/Account/Register.cshtml
@@ -69,7 +69,7 @@
                 </select>
             </div>
                <div class="form-floating mb-3 col-md-6">
-                <select asp-for="Input.CompanyId" asp-items="@Model.Input.CompanyList" class="form-select">
+                <select asp-for="Input.CompanyId" style="display: none;" asp-items="@Model.Input.CompanyList" class="form-select">
                     <option disabled selected value="">-Select Company-</option>
                 </select>
             </div>
@@ -118,4 +118,20 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
+    <script>
+        $(document).ready(function() {
+            $('#Input_Role').change(function(){
+                var roleSelected = $('#Input_Role option:selected').text();
+
+                if(role == 'Company')
+                {
+                    $('Input_CompanyId').show();
+                }
+                else
+                {
+                    $('Input_CompanyId').hide();
+                }
+            })
+        })
+    </script>
 }
