--- a/BulkyWeb/Areas/Admin/Views/Order/Details.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Order/Details.cshtml
@@ -117,7 +117,7 @@
                             <div class="row my-1">
                                 <div class="col-3">Order Date</div>
                                 <div class="col-9">
-                                        <input asp-for="OrderHeader.OrderDate.ToShortDateString()" type="text" class="form-control" readonly/>
+                                        <input value="@Model.OrderHeader.OrderDate.ToShortDateString()" type="text" class="form-control" readonly/>
                                 </div>
                             </div>
                             <div class="row my-1">
@@ -149,7 +149,7 @@
                             <div class="row my-1">
                                 <div class="col-3">Shipping Date</div>
                                 <div class="col-9">
-                                        <input asp-for="OrderHeader.ShippingDate.ToShortDateString()" type="text" class="form-control" readonly/>
+                                        <input value="@Model.OrderHeader.ShippingDate.ToShortDateString()" type="text" class="form-control" readonly/>
                                 </div>
                             </div>
                          @if(User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Employee))
@@ -157,7 +157,7 @@
                             <div class="row my-1">
                                 <div class="col-3">Session ID</div>
                                 <div class="col-9">
-                                        <input asp-for="OrderHeader.SessionId" type="text" class="form-control" readonly/>
+                                        <input value="@Model.OrderHeader.SessionId" type="text" class="form-control" readonly/>
                                 </div>
                             </div>
                             <div class="row my-1">
@@ -230,10 +230,31 @@
                                     </div>
                                 </li>
                             </ul>
-                            <input type="submit" class="btn btn-success form-control my-1" value="Pay Now" />
-                            <input type="submit" class="btn btn-primary form-control my-1" value="Start Processing" />
-                            <input type="submit" class="btn btn-primary form-control my-1" value="Ship Order" />
-                            <input type="submit" class="btn btn-danger form-control my-1" value="Cancel Order" />
+                            
+                            @if(Model.OrderHeader.PaymentStatus == SD.PaymentStatusDelayedPayment && Model.OrderHeader.OrderStatus == SD.StatusApproved)
+                            {
+                                <button type="submit" class="btn btn-success form-control my-1">Pay now</button>
+                            }
+
+                            @if(User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Employee))
+                            {
+                                @if(Model.OrderHeader.OrderStatus == SD.StatusApproved)
+                                {
+                                    <button type="submit" asp-action="StartProcessing" class="btn btn-primary form-control my-1">Start Processing</button>
+                                }
+
+                                @if(Model.OrderHeader.OrderStatus == SD.StatusInProcess)
+                                {
+                                    <button type="submit" asp-action="ShipOrder" onclick="return validateInput()" class="btn btn-success form-control my-1">Ship Order</button>
+                                }
+
+                                @if(Model.OrderHeader.OrderStatus != SD.StatusShipped && Model.OrderHeader.OrderStatus != SD.StatusRefunded &&
+                                Model.OrderHeader.OrderStatus != SD.StatusCancelled)
+                                {
+                                    <button type="submit" asp-action="CancelOrder" class="btn btn-danger form-control my-1">Cancel Order</button>
+                                }
+                            }
+
                         </div>
                     </div>
                 </div>
@@ -241,3 +262,32 @@
         </div>
     </div>
 </form>
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+
+    <script>
+        function validateInput() {
+            var tracking = document.getElementById("OrderHeader_TrackingNumber").value;
+            if (tracking == "") {
+               Swal.fire({
+                    icon: 'error',
+                    title: 'Oops...',
+                    text: 'Please enter Tracking Number!',
+                });
+                return false;
+            }
+
+            if (document.getElementById("OrderHeader_Carrier").value == "") {
+               Swal.fire({
+                    icon: 'error',
+                    title: 'Oops...',
+                    text: 'Please enter carrier!',
+                });
+                return false;
+            }
+
+            return true;
+        }
+    </script>
+}
