--- a/BulkyWeb/Views/Shared/_Layout.cshtml
+++ b/BulkyWeb/Views/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor HttpContextAccessor
+
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -55,13 +58,13 @@
                                 <hr class="dropdown-divider">
                         </li>
                         }
-                         <li class="nav-item">
+
+                        <li class="nav-item">
                             <a class="nav-link" asp-area="Customer" asp-controller="Cart" asp-action="Index">
-                                <i class="bi bi-cart"></i>&nbsp; 
+                                @await Component.InvokeAsync("ShoppingCart")
                             </a>
                         </li>
                             </ul>
-                    </ul>
                     <partial name="_LoginPartial" />
                 </div>
             </div>
