--- a/BulkyWeb/Views/Shared/_Layout.cshtml
+++ b/BulkyWeb/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
                                     <a class="dropdown-item" asp-area="Admin" asp-controller="Product"
                                         asp-action="Index">Product</a>
                                 </li>
-                                 <li class="nav-item">
+                                <li class="nav-item">
                                     <a class="dropdown-item" asp-area="Admin" asp-controller="Company"
                                         asp-action="Index">Company</a>
                                 </li>
@@ -62,6 +62,10 @@
                                 <li class="nav-item">
                                     <a class="dropdown-item" asp-area="Identity"
                                         asp-page="/Account/Register">Create User</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="dropdown-item" asp-area="Admin" asp-controller="User"
+                                        asp-action="Index">Manage User</a>
                                 </li>
                             </ul>
                         </li>
