--- a/BulkyWeb/Areas/Admin/Views/User/Index.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/User/Index.cshtml
@@ -12,14 +12,8 @@
         </div>
     </div>
     <div class="card-body p-4">
-   <div class="row pb-3">
-        <div class="col-12 text-end">
-             <a asp-controller="Product" asp-action="Upsert" class="btn btn-primary">
-                <i class="bi bi-plus-circle"></i> Create New Product</a>
-        </div>
-    </div>
 
-<table id="userTable" class="table table-bordered table-striped">
+<table id="userTable" class="table table-bordered table-striped" style="width: 100%;">
     <thead>
     <tr>
       <th>Name</th>
