--- a/BulkyWeb/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Product/Upsert.cshtml
@@ -11,7 +11,7 @@
     <div class="card-body p-4">
         <form method="post" class="row" enctype="multipart/form-data">
         <input asp-for="Product.Id" type="hidden" />
-        <input asp-for="Product.ImageUrl" type="hidden" />
+        @* <input asp-for="Product.ImageUrl" type="hidden" /> *@
 
 
         <div class="row">
@@ -73,7 +73,7 @@
 
         <div class="form-floating py-2 col-12">
             <input type="file" name="file" class="form-control border-0 shadow" />
-            <label asp-for="Product.ImageUrl" class="ms-2"></label>
+            @* <label asp-for="Product.ImageUrl" class="ms-2"></label> *@
         </div>
 
         <div class="row pt-2">
@@ -94,7 +94,7 @@
     </div>
             </div>
             <div class="col-2">
-                <img src="@Model.Product.ImageUrl" width="100" height="100" class="img-thumbnail" alt="@Model.Product.Title"
+                @* <img src="@Model.Product.ImageUrl" width="100" height="100" class="img-thumbnail" alt="@Model.Product.Title" *@
                 style="border-radius: 5px; border: 1px solid #bbb9b9"/>
             </div>
         </div>
