--- a/BulkyWeb/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Product/Upsert.cshtml
@@ -11,9 +11,6 @@
     <div class="card-body p-4">
         <form method="post" class="row" enctype="multipart/form-data">
         <input asp-for="Product.Id" type="hidden" />
-        @* <input asp-for="Product.ImageUrl" type="hidden" /> *@
-
-
         <div class="row">
             <div class="col-10">
 <div class="border p-3">
@@ -72,8 +69,8 @@
         </div>
 
         <div class="form-floating py-2 col-12">
-            <input type="file" name="file" class="form-control border-0 shadow" />
-            @* <label asp-for="Product.ImageUrl" class="ms-2"></label> *@
+            <input type="files" name="files" class="form-control border-0 shadow" multiple/>
+            <label asp-for="Product.ProductImages" class="ms-2"></label>
         </div>
 
         <div class="row pt-2">
