--- a/BulkyWeb/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Product/Upsert.cshtml
@@ -91,8 +91,14 @@
     </div>
             </div>
             <div class="col-2">
-                @* <img src="@Model.Product.ImageUrl" width="100" height="100" class="img-thumbnail" alt="@Model.Product.Title" *@
-                style="border-radius: 5px; border: 1px solid #bbb9b9"/>
+                @if (Model.Product.ProductImages != null)
+                {
+                    foreach (var image in Model.Product.ProductImages)
+                    {
+                        <img src="@image.Url" width="100" height="100" class="img-thumbnail" 
+                        alt="@Model.Product.Title" style="border-radius: 5px; border: 1px solid #bbb9b9"/>
+                    }
+                }
             </div>
         </div>
 
