--- a/BulkyWeb/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Product/Upsert.cshtml
@@ -97,6 +97,9 @@
                     {
                         <img src="@image.Url" width="100" height="100" class="img-thumbnail" 
                         alt="@Model.Product.Title" style="border-radius: 5px; border: 1px solid #bbb9b9"/>
+                        <a asp-controller="Product" asp-action="DeleteImage" asp-route-imageId="@image.Id" class="btn btn-danger btn-sm">
+                            <i class="fas fa-trash"></i>Delete
+                        </a>
                     }
                 }
             </div>
