--- a/BulkyWeb/Areas/Customer/Views/Home/Details.cshtml
+++ b/BulkyWeb/Areas/Customer/Views/Home/Details.cshtml
@@ -15,14 +15,54 @@
             <div class="py-3">
                 <div class="row">
                     <div class="col-6 col-md-2 offset-lg-1 pb-1">
-                        <a asp-action="Index" class="btn btn-outline-primary bg-gradient mb-5 fw-semibold btn-sm text-uppercase">
+                        <a asp-action="Index"
+                            class="btn btn-outline-primary bg-gradient mb-5 fw-semibold btn-sm text-uppercase">
                             <small>Back to home</small>
                         </a>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-12 col-lg-3 offset-lg-1 text-center mb-3">
-                        @* <img src="@Model.Product.ImageUrl" width="100%" class="rounded" /> *@
+                        @if (Model.Product.ProductImages != null && Model.Product.ProductImages.Count() > 0)
+                        {
+
+                            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                                <ol class="carousel-indicators">
+                                    @foreach (var imageWithIndex in Model.Product.ProductImages.Select((value, index) => new { Value = value, Index = index }))
+                                    {
+                                        <li data-target="#carouselExampleIndicators" data-slide-to="@imageWithIndex.Index"
+                                            class="@(imageWithIndex.Index == 0 ? "active" : "")"></li>
+                                    }
+                                </ol>
+                                <div class="carousel-inner">
+                                    @foreach (var imageWithIndex in Model.Product.ProductImages.Select((value, index) => new { Value = value, Index = index }))
+                                    {
+                                        <div class="carousel-item @(imageWithIndex.Index == 0 ? "active" : "")">
+                                            <img src="~/@imageWithIndex.Value.ImageUrl" class="d-block w-100" alt="...">
+                                        </div>
+                                    }
+                                </div>
+                                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button"
+                                    data-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button"
+                                    data-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </div>
+                        }
+
+
+
+
+
+
+
+
+
                     </div>
                     <div class="col-12 col-lg-6 offset-lg-1">
 
@@ -33,7 +73,7 @@
                             <h6 class="text-dark text-opacity-50 ">ISBN : @Model.Product.ISBN</h6>
                         </div>
                         <div class="row ps-2">
-                            <h6 class="text-dark text-opacity-50  pb-2">List Price: 
+                            <h6 class="text-dark text-opacity-50  pb-2">List Price:
                                 <span class="text-decoration-line-through">
                                     @Model.Product.ListPrice
                                 </span>
@@ -73,22 +113,23 @@
                         <div class="row pl-2 mb-3">
                             <div class="col-md-4">
                                 <div class="input-group mb-3">
-                                    <span class="input-group-text bg-primary text-white border-0 fw-semibold" 
-                                    id="inputGroup-sizing-default">
+                                    <span class="input-group-text bg-primary text-white border-0 fw-semibold"
+                                        id="inputGroup-sizing-default">
                                         Count
                                     </span>
                                     <input asp-for="Count" type="number" value="1" class="form-control text-end"
-                                    aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"/>
+                                        aria-label="Sizing example input"
+                                        aria-describedby="inputGroup-sizing-default" />
 
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-12 col-md-6 pb-1">
-                                <button type="submit" 
+                                <button type="submit"
                                     class="btn btn-primary bg-gradient  w-100 py-2 text-uppercase fw-semibold">
-                                Add to Cart
-                            </button>
+                                    Add to Cart
+                                </button>
                             </div>
                         </div>
                     </div>
