Add migration for Category table to seed the database with more records

--- a/BulkyWeb/Views/Shared/_Layout.cshtml
+++ b/BulkyWeb/Views/Shared/_Layout.cshtml
@@ -91,7 +91,7 @@
 
     <footer class="border-top footer bg-primary text-muted">
         <div class="text-center">
-            Made with <i class="bi bi-heart-fill"></i>
+            Online Book Store<i class="bi bi-book"></i>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
