--- a/BulkyWeb/Areas/Admin/Views/Category/Index.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Category/Index.cshtml
@@ -13,41 +13,43 @@
         </div>
     </div>
     <div class="card-body p-4">
-   <div class="row pb-3">
-        <div class="col-12 text-end">
-             <a asp-controller="Category" asp-action="Create" class="btn btn-primary">
-                <i class="bi bi-plus-circle"></i> Create New Category</a>
+        <div class="row pb-3">
+            <div class="col-12 text-end">
+                <a asp-controller="Category" asp-action="Create" class="btn btn-primary">
+                    <i class="bi bi-plus-circle"></i> Create New Category</a>
+            </div>
         </div>
-    </div>
 
-<table class="table table-bordered table-striped">
-    <thead>
-    <tr>
-        <th>Category Name</th>
-        <th>Display Order</th>
-        <th></th>
-    </tr>
-     </thead>
-     <tbody>
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>@item.Name</td>
-            <td>@item.DisplayOrder</td>
-            <td>
-                <div class="w-75 btn-group" role="group">
-                    <a asp-controller="Category" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary mx-2">
-                        <i class="bi bi-pencil"></i> Edit
-                    </a>
-                    <a asp-controller="Category" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger mx-2">
-                        <i class="bi bi-trash"></i> Delete
-                    </a>
-                </div>
-            </td>
-        </tr>
-    }
-    </tbody>
-</table>
-</div>
+        <table class="table table-bordered table-striped">
+            <thead>
+            <tr>
+                <th>Category Name</th>
+                <th>Display Order</th>
+                <th></th>
+            </tr>
+            </thead>
+            <tbody>
+            @foreach (var category in Model)
+            {
+                <tr>
+                    <td>@category.Name</td>
+                    <td>@category.DisplayOrder</td>
+                    <td>
+                        <div class="w-75 btn-group" role="group">
+                            <a asp-controller="Category" asp-action="Edit" asp-route-id="@category.Id"
+                               class="btn btn-primary mx-2">
+                                <i class="bi bi-pencil"></i> Edit
+                            </a>
+                            <a asp-controller="Category" asp-action="Delete" asp-route-id="@category.Id"
+                               class="btn btn-danger mx-2">
+                                <i class="bi bi-trash"></i> Delete
+                            </a>
+                        </div>
+                    </td>
+                </tr>
+            }
+            </tbody>
+        </table>
+    </div>
 
 </div>
