Refactor role management and update company details for consistency; improve code readability and structure

--- a/BookStoreWeb/Areas/Admin/Views/User/RoleManagement.cshtml
+++ b/BookStoreWeb/Areas/Admin/Views/User/RoleManagement.cshtml
@@ -23,7 +23,7 @@
         @{
             var companyVisible ="display:none;";
         }
-        @if (Model.ApplicationUser.Role == SD.Role_Company)
+        @if (Model.ApplicationUser.Role == SD.RoleCompany)
         {
             companyVisible = "display:block;";
         }
