--- a/BookStoreWeb/Areas/Admin/Views/Order/Details.cshtml
+++ b/BookStoreWeb/Areas/Admin/Views/Order/Details.cshtml
@@ -27,7 +27,7 @@
                             <div class="row my-1">
                                 <div class="col-3">Name</div>
                                 <div class="col-9">
-                                    @if(User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Employee))
+                                    @if(User.IsInRole(SD.RoleAdmin) || User.IsInRole(SD.RoleEmployee))
                                     {
                                         <input asp-for="OrderHeader.Name" type="text" class="form-control"/>
                                         <span asp-validation-for="OrderHeader.Name" class="text-danger"></span>
@@ -41,7 +41,7 @@
                             <div class="row my-1">
                                 <div class="col-3">Phone</div>
                                 <div class="col-9">
-                                      @if(User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Employee))
+                                      @if(User.IsInRole(SD.RoleAdmin) || User.IsInRole(SD.RoleEmployee))
                                     {
                                         <input asp-for="OrderHeader.PhoneNumber" type="text" class="form-control"/>
                                         <span asp-validation-for="OrderHeader.PhoneNumber" class="text-danger"></span>
@@ -55,7 +55,7 @@
                             <div class="row my-1">
                                 <div class="col-3">Address</div>
                                 <div class="col-9">
-                                    @if(User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Employee))
+                                    @if(User.IsInRole(SD.RoleAdmin) || User.IsInRole(SD.RoleEmployee))
                                     {
                                         <input asp-for="OrderHeader.StreetAddress" type="text" class="form-control"/>
                                         <span asp-validation-for="OrderHeader.StreetAddress" class="text-danger"></span>
@@ -69,7 +69,7 @@
                             <div class="row my-1">
                                 <div class="col-3">City</div>
                                 <div class="col-9">
-                                     @if(User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Employee))
+                                     @if(User.IsInRole(SD.RoleAdmin) || User.IsInRole(SD.RoleEmployee))
                                     {
                                         <input asp-for="OrderHeader.City" type="text" class="form-control"/>
                                         <span asp-validation-for="OrderHeader.City" class="text-danger"></span>
@@ -83,7 +83,7 @@
                             <div class="row my-1">
                                 <div class="col-3">State</div>
                                 <div class="col-9">
-                                   @if(User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Employee))
+                                   @if(User.IsInRole(SD.RoleAdmin) || User.IsInRole(SD.RoleEmployee))
                                     {
                                         <input asp-for="OrderHeader.State" type="text" class="form-control"/>
                                         <span asp-validation-for="OrderHeader.State" class="text-danger"></span>
@@ -97,7 +97,7 @@
                             <div class="row my-1">
                                 <div class="col-3">Zip Code</div>
                                 <div class="col-9">
-                                    @if(User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Employee))
+                                    @if(User.IsInRole(SD.RoleAdmin) || User.IsInRole(SD.RoleEmployee))
                                     {
                                         <input asp-for="OrderHeader.PostalAddress" type="text" class="form-control"/>
                                         <span asp-validation-for="OrderHeader.PostalAddress" class="text-danger"></span>
@@ -123,7 +123,7 @@
                             <div class="row my-1">
                                 <div class="col-3">Carrier</div>
                                 <div class="col-9">
-                                      @if(User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Employee))
+                                      @if(User.IsInRole(SD.RoleAdmin) || User.IsInRole(SD.RoleEmployee))
                                     {
                                         <input asp-for="OrderHeader.Carrier" type="text" class="form-control"/>
                                     }
@@ -136,7 +136,7 @@
                             <div class="row my-1">
                                 <div class="col-3">Tracking</div>
                                 <div class="col-9">
-                                      @if(User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Employee))
+                                      @if(User.IsInRole(SD.RoleAdmin) || User.IsInRole(SD.RoleEmployee))
                                     {
                                         <input asp-for="OrderHeader.TrackingNumber" type="text" class="form-control"/>
                                     }
@@ -152,7 +152,7 @@
                                         <input value="@Model.OrderHeader.ShippingDate.ToShortDateString()" type="text" class="form-control" readonly/>
                                 </div>
                             </div>
-                         @if(User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Employee))
+                         @if(User.IsInRole(SD.RoleAdmin) || User.IsInRole(SD.RoleEmployee))
                          {
                             <div class="row my-1">
                                 <div class="col-3">Session ID</div>
@@ -191,7 +191,7 @@
                                         <input asp-for="OrderHeader.PaymentStatus" type="text" class="form-control" readonly/>
                                 </div>
                             </div>
-                            @if(User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Employee))
+                            @if(User.IsInRole(SD.RoleAdmin) || User.IsInRole(SD.RoleEmployee))
                             {
                                 <button type="submit" asp-action="UpdateOrderDetail" class="btn btn-warning form-control my-1">Update Order Details</button>
                             }
@@ -236,7 +236,7 @@
                                 <button type="submit" class="btn btn-success form-control my-1">Pay now</button>
                             }
 
-                            @if(User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Employee))
+                            @if(User.IsInRole(SD.RoleAdmin) || User.IsInRole(SD.RoleEmployee))
                             {
                                 @if(Model.OrderHeader.OrderStatus == SD.StatusApproved)
                                 {
