--- a/BookStoreWeb/Areas/Customer/Views/Home/Details.cshtml
+++ b/BookStoreWeb/Areas/Customer/Views/Home/Details.cshtml
@@ -1,7 +1,7 @@
 @model ShoppingCart
 
 <form method="post">
-    <input hidden asp-for="ProductId" />
+    <input hidden asp-for="ProductId"/>
     <div class="card shadow border-0 mt-4 mb-4">
         <div class="card-header bg-secondary bg-gradient text-light py-4">
             <div class="row">
@@ -16,7 +16,7 @@
                 <div class="row">
                     <div class="col-6 col-md-2 offset-lg-1 pb-1">
                         <a asp-action="Index"
-                            class="btn btn-outline-primary bg-gradient mb-5 fw-semibold btn-sm text-uppercase">
+                           class="btn btn-outline-primary bg-gradient mb-5 fw-semibold btn-sm text-uppercase">
                             <small>Back to home</small>
                         </a>
                     </div>
@@ -25,12 +25,14 @@
                     <div class="col-12 col-lg-3 offset-lg-1 text-center mb-3">
                         @if (Model.Product.ProductImages != null && Model.Product.ProductImages.Count() > 0)
                         {
-
                             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                                 <ol class="carousel-indicators">
-                                    @foreach (var imageWithIndex in Model.Product.ProductImages.Select((value, index) => new { Value = value, Index = index }))
+                                    @foreach (var imageWithIndex in Model.Product
+                                                      .ProductImages
+                                                      .Select((value, index) => new { Value = value, Index = index }))
                                     {
-                                        <li data-target="#carouselExampleIndicators" data-slide-to="@imageWithIndex.Index"
+                                        <li data-target="#carouselExampleIndicators"
+                                            data-slide-to="@imageWithIndex.Index"
                                             class="@(imageWithIndex.Index == 0 ? "active" : "")"></li>
                                     }
                                 </ol>
@@ -55,7 +57,7 @@
                             </div>
                         }
                     </div>
-                    
+
                     <div class="col-12 col-lg-6 offset-lg-1">
 
                         <div class="col-12 col-md-6 pb-4">
@@ -106,26 +108,24 @@
                             <div class="col-md-4">
                                 <div class="input-group mb-3">
                                     <span class="input-group-text bg-primary text-white border-0 fw-semibold"
-                                        id="inputGroup-sizing-default">
+                                          id="inputGroup-sizing-default">
                                         Count
                                     </span>
                                     <input asp-for="Count" type="number" value="1" class="form-control text-end"
-                                        aria-label="Sizing example input"
-                                        aria-describedby="inputGroup-sizing-default" />
-
+                                           aria-label="Sizing example input"
+                                           aria-describedby="inputGroup-sizing-default"/>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-12 col-md-6 pb-1">
                                 <button type="submit"
-                                    class="btn btn-primary bg-gradient  w-100 py-2 text-uppercase fw-semibold">
+                                        class="btn btn-primary bg-gradient  w-100 py-2 text-uppercase fw-semibold">
                                     Add to Cart
                                 </button>
                             </div>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
