--- a/BookStoreWeb/Views/Shared/_Layout.cshtml
+++ b/BookStoreWeb/Views/Shared/_Layout.cshtml
@@ -31,12 +31,12 @@
             <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" asp-area="Admin" asp-controller="Home" asp-action="Index">Home</a>
+                        <a class="nav-link" asp-area="Customer" asp-controller="Home" asp-action="Index">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" asp-area="Admin" asp-controller="Order" asp-action="Index">Manage Order</a>
                     </li>
-                    @if (User.IsInRole(SD.Role_Admin))
+                    @if (User.IsInRole(SD.RoleAdmin))
                     {
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
