--- a/BookStoreWeb/Areas/Customer/Views/Cart/Summary.cshtml
+++ b/BookStoreWeb/Areas/Customer/Views/Cart/Summary.cshtml
@@ -1,20 +1,21 @@
 @model ShoppingCartVM
 
 <form method="post">
-	<br />
+	<br/>
 	<div class="container">
 		<div class="card shadow border-0">
-			
 			<div class="card-header bg-secondary bg-gradient text-light ml-0 py-4">
 				<div class="row px-4">
 					<div class="col-6">
 						<h5 class="pt-2 text-white">
-							Order S
+							Order Summary
 						</h5>
 					</div>
-				<div class="col-6 text-end">
-					<a asp-controller="Cart" asp-action="Index" class="btn btn-outline-danger btn-sm">Back to Cart</a>
-				</div>
+					<div class="col-6 text-end">
+						<a asp-controller="Cart" asp-action="Index" class="btn btn-outline-danger btn-sm">
+							Back to Cart
+						</a>
+					</div>
 				</div>
 			</div>
 			<div class="card-body">
@@ -31,7 +32,7 @@
 									<label>Name</label>
 								</div>
 								<div class="col-9">
-									<input asp-for="OrderHeader.Name" class="form-control" />
+									<input asp-for="OrderHeader.Name" class="form-control"/>
 									<span asp-validation-for="OrderHeader.Name" class="text-danger"></span>
 								</div>
 							</div>
@@ -40,7 +41,7 @@
 									<label>Phone</label>
 								</div>
 								<div class="col-9">
-									<input asp-for="OrderHeader.PhoneNumber" class="form-control" />
+									<input asp-for="OrderHeader.PhoneNumber" class="form-control"/>
 									<span asp-validation-for="OrderHeader.PhoneNumber" class="text-danger"></span>
 								</div>
 							</div>
@@ -49,7 +50,7 @@
 									<label>Street Address</label>
 								</div>
 								<div class="col-9">
-									<input asp-for="OrderHeader.StreetAddress" class="form-control" />
+									<input asp-for="OrderHeader.StreetAddress" class="form-control"/>
 									<span asp-validation-for="OrderHeader.StreetAddress" class="text-danger"></span>
 								</div>
 							</div>
@@ -58,7 +59,7 @@
 									<label>City</label>
 								</div>
 								<div class="col-9">
-									<input asp-for="OrderHeader.City" class="form-control" />
+									<input asp-for="OrderHeader.City" class="form-control"/>
 									<span asp-validation-for="OrderHeader.City" class="text-danger"></span>
 								</div>
 							</div>
@@ -67,7 +68,7 @@
 									<label>State</label>
 								</div>
 								<div class="col-9">
-									<input asp-for="OrderHeader.State" class="form-control" />
+									<input asp-for="OrderHeader.State" class="form-control"/>
 									<span asp-validation-for="OrderHeader.State" class="text-danger"></span>
 								</div>
 							</div>
@@ -76,26 +77,27 @@
 									<label>Postal Code</label>
 								</div>
 								<div class="col-9">
-									<input asp-for="OrderHeader.PostalAddress" class="form-control" />
+									<input asp-for="OrderHeader.PostalAddress" class="form-control"/>
 									<span asp-validation-for="OrderHeader.PostalAddress" class="text-danger"></span>
 								</div>
 							</div>
 						</div>
+						
 						<div class="col-12 col-lg-5 offset-lg-1">
 							<h4 class="d-flex justify-content-between align-items-center mb-3">
 								<span class="text-info">Order Summary:</span>
 							</h4>
 							<ul class="list-group mb-3">
-							@foreach(var item in Model.ShoppingCartList)
-							{
-								<li class="list-group-item d-flex justify-content-between">
-									<div>
-										<h6 class="my-0">@item.Product.Title</h6>
-										<small class="text-muted">Quantity: @item.Count</small>
-									</div>
-									<span class="text-muted">@((item.Price * item.Count).ToString("c"))</span>
-								</li>
-							}
+								@foreach (var item in Model.ShoppingCartList)
+								{
+									<li class="list-group-item d-flex justify-content-between">
+										<div>
+											<h6 class="my-0">@item.Product.Title</h6>
+											<small class="text-muted">Quantity: @item.Count</small>
+										</div>
+										<span class="text-muted">@((item.Price * item.Count).ToString("c"))</span>
+									</li>
+								}
 
 								<li class="list-group-item d-flex justify-content-between bg-light">
 									<small class="text-info">Total (ZAR)</small>
@@ -114,7 +116,8 @@
 						</p>
 					</div>
 					<div class="col-12 col-md-4">
-						<button type="submit" value="Place Order" class="btn btn-primary form-control">Place Order</button>
+						<button type="submit" value="Place Order" class="btn btn-primary form-control">Place Order
+						</button>
 					</div>
 				</div>
 			</div>
