--- a/BookStoreWeb/Areas/Admin/Views/Order/Index.cshtml
+++ b/BookStoreWeb/Areas/Admin/Views/Order/Index.cshtml
@@ -29,7 +29,7 @@
 
 <div class="card shadow border-0 my-4">
     <div class="card-header bg-secondary bg-gradient ml-0 py-3">
-        <div class="row">
+        <div class="row"> 
             <div class="col-12 text-center">
                 <h2 class="text-white py-2">Order List</h2>
             </div>
@@ -39,13 +39,15 @@
         <div class="d-flex justify-content-between pb-5 pt-2">
             <span></span>
             <ul class="list-group list-group-horizontal-sm">
-                <a style="text-decoration: none;" asp-controller="Order" asp-action="Index" asp-route-status="inprocess">
+                <a style="text-decoration: none;" asp-controller="Order" asp-action="Index"
+                   asp-route-status="inprocess">
                     <li class="list-group-item @inprocess">In Process</li>
                 </a>
                 <a style="text-decoration: none;" asp-controller="Order" asp-action="Index" asp-route-status="pending">
                     <li class="list-group-item @pending">Payment Pending</li>
                 </a>
-                <a style="text-decoration: none;" asp-controller="Order" asp-action="Index" asp-route-status="completed">
+                <a style="text-decoration: none;" asp-controller="Order" asp-action="Index"
+                   asp-route-status="completed">
                     <li class="list-group-item @completed">Completed</li>
                 </a>
                 <a style="text-decoration: none;" asp-controller="Order" asp-action="Index" asp-route-status="approved">
@@ -57,23 +59,21 @@
             </ul>
         </div>
 
+        <table id="orderTable" class="table table-bordered table-striped">
+            <thead>
+            <tr>
+                <th>ID</th>
+                <th>Name</th>
+                <th>Phone Number</th>
+                <th>Email</th>
+                <th>Status</th>
+                <th>Total</th>
+                <th></th>
+            </tr>
+            </thead>
 
-<table id="orderTable" class="table table-bordered table-striped">
-    <thead>
-    <tr>
-      <th>ID</th>
-      <th>Name</th>
-      <th>Phone Number</th>
-      <th>Email</th>
-      <th>Status</th>
-      <th>Total</th>
-      <th></th>
-    </tr>
-     </thead>
-     
-</table>
-</div>
-
+        </table>
+    </div>
 </div>
 
 @section Scripts {
